finally founds reason for the issues in the model, and fixes it

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,8 @@
     "from numpy.typing import NDArray\n",
     "from typing import Dict\n",
     "import pandas as pd\n",
-    "from typing import cast\n"
+    "from typing import cast\n",
+    "import logging\n"
    ]
   },
   {
@@ -1765,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1785,6 +1786,9 @@
     "            y_label = y[:, label].todense()\n",
     "            y_label_vector = np.asarray(y_label).reshape(-1)\n",
     "            # convert_matrix_to_vector\n",
+    "\n",
+    "            logging.info(f\"fitting classifier for label {label}\")\n",
+    "            logging.info(f\"X_extended.shape: {X_extended.shape}\")\n",
     "\n",
     "            meta_classifier = copy.deepcopy(self.base_classifier)\n",
     "            meta_classifier.fit(X_extended, y_label_vector)\n",
@@ -2035,6 +2039,164 @@
     "\n",
     "# if the numbers are the same, then the preds are exactly the same"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fitting classifier for label 5\n",
+      "fitting classifier for label 4\n",
+      "fitting classifier for label 3\n",
+      "fitting classifier for label 2\n",
+      "fitting classifier for label 1\n",
+      "fitting classifier for label 0\n",
+      "generating predictions for label 5\n",
+      "this is the reshaped_prediction: (1196, 1)\n",
+      "this is the reshaped_prediction: 80\n",
+      "generating predictions for label 4\n",
+      "this is the reshaped_prediction: (1196, 1)\n",
+      "this is the reshaped_prediction: 138\n",
+      "generating predictions for label 3\n",
+      "this is the reshaped_prediction: (1196, 1)\n",
+      "this is the reshaped_prediction: 176\n",
+      "generating predictions for label 2\n",
+      "this is the reshaped_prediction: (1196, 1)\n",
+      "this is the reshaped_prediction: 148\n",
+      "generating predictions for label 1\n",
+      "this is the reshaped_prediction: (1196, 1)\n",
+      "this is the reshaped_prediction: 151\n",
+      "generating predictions for label 0\n",
+      "this is the reshaped_prediction: (1196, 1)\n",
+      "this is the reshaped_prediction: 140\n",
+      "(what) hamming loss: 0.0883500557413601\n",
+      "(what) f1 score: 0.6970514171577173\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DebuggingClassifierChain_:\n",
+    "    def __init__(self, base_classifier: Any, order: List[int]) -> None:\n",
+    "        self.base_classifier = base_classifier\n",
+    "        self.order = order\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        label_count = y.shape[1]\n",
+    "        # TODO: maybe add some validation, sa the label count must match the order length\n",
+    "\n",
+    "        self.classifiers = {}\n",
+    "        # using a dict instead of a list as the index has to be the label following the custom order\n",
+    "        # a list would also work, but it is more readable this way\n",
+    "\n",
+    "        X_extended = np.asarray(X.todense())\n",
+    "        for label in self.order:\n",
+    "            y_label = y[:, label].todense()\n",
+    "            y_label_vector = np.asarray(y_label).reshape(-1)\n",
+    "            # convert_matrix_to_vector\n",
+    "\n",
+    "            print(f\"fitting classifier for label {label}\")\n",
+    "            # print(f\"X_extended.shape: {X_extended.shape}\")\n",
+    "            # print(f\"Actual contents\", X_extended)\n",
+    "\n",
+    "            meta_classifier = copy.deepcopy(self.base_classifier)\n",
+    "            meta_classifier.fit(X_extended, y_label_vector)\n",
+    "            self.classifiers[label] = meta_classifier\n",
+    "\n",
+    "\n",
+    "            # just for the sake of testing\n",
+    "            X_train_, X_test_, y_train_, y_test_ = train_test_split(\n",
+    "                X_extended, y_label_vector, test_size=0.33, random_state=42\n",
+    "            )\n",
+    "\n",
+    "            meta_classifier_2 = copy.deepcopy(self.base_classifier)\n",
+    "            meta_classifier_2.fit(X_train_, y_train_)\n",
+    "            specific_preds = meta_classifier_2.predict(X_test_)\n",
+    "\n",
+    "            hl = metrics.hamming_loss(y_test_, specific_preds)\n",
+    "            f1 = metrics.f1_score(y_test_, specific_preds, average=\"macro\")\n",
+    "\n",
+    "            # print(f\"hamming loss: {hl}\")\n",
+    "            # print(f\"f1 score: {f1}\")\n",
+    "            # print()\n",
+    "\n",
+    "            # predicted_y_label = np.asarray(predicted_y_label).reshape(-1, 1)\n",
+    "\n",
+    "            # TODO try to add random binary values ares the predictions, and check performance\n",
+    "            # predicted_y_label = np.random.randint(0, 2, size=(X_extended.shape[0], 1))\n",
+    "\n",
+    "            X_extended = np.hstack([X_extended, y_label])\n",
+    "            X_extended = np.asarray(X_extended)\n",
+    "        \n",
+    "    def predict(self, X: Any) -> Any:\n",
+    "        X_extended = np.asarray(X.todense())\n",
+    "\n",
+    "        predicted_labels = {}\n",
+    "        for label in self.order:\n",
+    "            print(f\"generating predictions for label {label}\")\n",
+    "            prediction = self.classifiers[label].predict(X_extended)\n",
+    "            predicted_labels[label] = prediction\n",
+    "            \n",
+    "            reshaped_prediction = np.asarray(prediction).reshape(-1, 1)\n",
+    "\n",
+    "            print(f\"this is the reshaped_prediction: {reshaped_prediction.shape}\")\n",
+    "            print(f\"this is the reshaped_prediction: {reshaped_prediction.sum()}\")\n",
+    "\n",
+    "            X_extended = np.hstack([X_extended, reshaped_prediction])\n",
+    "            X_extended = np.asarray(X_extended)\n",
+    "        \n",
+    "        predictions_in_original_label_order = []\n",
+    "        original_label_order = np.arange(len(self.order))\n",
+    "        for label in original_label_order:\n",
+    "            predictions_in_original_label_order.append(predicted_labels[label])\n",
+    "\n",
+    "        reshaped_array = np.asarray(predictions_in_original_label_order).T\n",
+    "        return reshaped_array\n",
+    "\n",
+    "\n",
+    "m_ = DebuggingClassifierChain_(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    # order=[0, 1, 2, 3, 4, 5]\n",
+    "    order=[5, 4, 3, 2, 1, 0]\n",
+    "    )\n",
+    "\n",
+    "m_.fit(X, y)\n",
+    "preds_ = m_.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, preds_)\n",
+    "f1_score = metrics.f1_score(y_test, preds_, average=\"macro\")\n",
+    "\n",
+    "print(f\"(what) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(what) f1 score: {f1_score}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Notes**\n",
+    "\n",
+    "I am conducting several tests on the same Jupyter notebook cell.\n",
+    "\n",
+    "What I tried to do was check how the performance changes as we further progress on the chain, by training a second meta classifier and checking its score. **The performance clearly increases as the chain progress**. But when using the full chain, the results are terrible. Let's keep investigating. The problem might be in the `predict` method.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Ok, I finally got what the issue is. The output of the model follows the same custom order that you provided as a parameter to the model. This means that the output of the model, the predictions, are not _aligned_ with the labels present in the testing dataset. So whenever you change the order even by just a single position, the results will drop a lot because when you compare the predictions with the actual labels, you will not be comparing the same labels.\n",
+    "\n",
+    "**The solution is to ensure that the output of the model is always aligned with the labels present in the testing dataset**. This means that the output of the model will always be the same, regardless of the order that you provide to the model.\n",
+    "\n",
+    "By doing so, we finally got results that make sense, without sudden drops just because we changed the order of the chain."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
