implements final fixed version of the models

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -2042,39 +2042,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fitting classifier for label 5\n",
       "fitting classifier for label 4\n",
-      "fitting classifier for label 3\n",
+      "fitting classifier for label 5\n",
       "fitting classifier for label 2\n",
-      "fitting classifier for label 1\n",
       "fitting classifier for label 0\n",
-      "generating predictions for label 5\n",
-      "this is the reshaped_prediction: (1196, 1)\n",
-      "this is the reshaped_prediction: 80\n",
+      "fitting classifier for label 3\n",
+      "fitting classifier for label 1\n",
       "generating predictions for label 4\n",
       "this is the reshaped_prediction: (1196, 1)\n",
-      "this is the reshaped_prediction: 138\n",
-      "generating predictions for label 3\n",
+      "this is the reshaped_prediction: 108\n",
+      "generating predictions for label 5\n",
       "this is the reshaped_prediction: (1196, 1)\n",
-      "this is the reshaped_prediction: 176\n",
+      "this is the reshaped_prediction: 99\n",
       "generating predictions for label 2\n",
       "this is the reshaped_prediction: (1196, 1)\n",
-      "this is the reshaped_prediction: 148\n",
-      "generating predictions for label 1\n",
-      "this is the reshaped_prediction: (1196, 1)\n",
-      "this is the reshaped_prediction: 151\n",
+      "this is the reshaped_prediction: 152\n",
       "generating predictions for label 0\n",
       "this is the reshaped_prediction: (1196, 1)\n",
-      "this is the reshaped_prediction: 140\n",
+      "this is the reshaped_prediction: 137\n",
+      "generating predictions for label 3\n",
+      "this is the reshaped_prediction: (1196, 1)\n",
+      "this is the reshaped_prediction: 175\n",
+      "generating predictions for label 1\n",
+      "this is the reshaped_prediction: (1196, 1)\n",
+      "this is the reshaped_prediction: 150\n",
       "(what) hamming loss: 0.0883500557413601\n",
-      "(what) f1 score: 0.6970514171577173\n"
+      "(what) f1 score: 0.696385030865942\n"
      ]
     }
    ],
@@ -2152,6 +2152,8 @@
     "        original_label_order = np.arange(len(self.order))\n",
     "        for label in original_label_order:\n",
     "            predictions_in_original_label_order.append(predicted_labels[label])\n",
+    "        # this is **very important**, otherwise the output of the model will not\n",
+    "        # be comparable to the testing dataset \n",
     "\n",
     "        reshaped_array = np.asarray(predictions_in_original_label_order).T\n",
     "        return reshaped_array\n",
@@ -2160,7 +2162,7 @@
     "m_ = DebuggingClassifierChain_(\n",
     "    RandomForestClassifier(random_state=42),\n",
     "    # order=[0, 1, 2, 3, 4, 5]\n",
-    "    order=[5, 4, 3, 2, 1, 0]\n",
+    "    order=[4, 5, 2, 0, 3, 1]\n",
     "    )\n",
     "\n",
     "m_.fit(X, y)\n",
@@ -2196,7 +2198,225 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 9.10. The definitive implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(fixed) hamming loss: 0.0883500557413601\n",
+      "(fixed) f1 score: 0.696385030865942\n"
+     ]
+    }
+   ],
+   "source": [
+    "class FixedClassifierChain:\n",
+    "    \"\"\"\n",
+    "    Works just like the `ClassifierChain` class from `scikit-multilearn`, but ensures\n",
+    "    that the output is in the same order as the labels in the dataset\n",
+    "    regardless of the custom order of the classifiers\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, base_classifier: Any, order: List[int]) -> None:\n",
+    "        self.base_classifier = base_classifier\n",
+    "        self.order = order\n",
+    "        # TODO: should have a validation for the order, as it should not contain duplicated values\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        label_count = y.shape[1]\n",
+    "        # TODO: maybe add some validation, sa the label count must match the order length\n",
+    "\n",
+    "        self.classifiers = {}\n",
+    "        # using a dict instead of a list as the index has to be the label following the custom order\n",
+    "        # a list would also work, but it is more readable this way\n",
+    "\n",
+    "        self.metrics = []\n",
+    "\n",
+    "        X_extended = np.asarray(X.todense())\n",
+    "        for label in self.order:\n",
+    "            y_label = y[:, label].todense()\n",
+    "\n",
+    "            y_label_vector = np.asarray(y_label).reshape(-1)\n",
+    "            # convert_matrix_to_vector\n",
+    "\n",
+    "            meta_classifier = copy.deepcopy(self.base_classifier)\n",
+    "            meta_classifier.fit(X_extended, y_label_vector)\n",
+    "            self.classifiers[label] = meta_classifier\n",
+    "\n",
+    "            X_extended = np.hstack([X_extended, y_label])\n",
+    "            X_extended = np.asarray(X_extended)\n",
+    "\n",
+    "            # the following section gathers metrics throughout the training\n",
+    "            # it has no impact in the actual model performance, but it might\n",
+    "            # be interesting to study how to model behaves as it is being trained\n",
+    "            metrics_X_train, metrics_X_test, metrics_y_train, metrics_y_test = train_test_split(\n",
+    "                X_extended, y_label_vector, test_size=0.33, random_state=42\n",
+    "            )\n",
+    "\n",
+    "            meta_classifier_for_metrics = copy.deepcopy(self.base_classifier)\n",
+    "            meta_classifier_for_metrics.fit(metrics_X_train, metrics_y_train)\n",
+    "            metrics_predictions = meta_classifier_for_metrics.predict(metrics_X_test)\n",
+    "\n",
+    "            hl = metrics.hamming_loss(metrics_y_test, metrics_predictions)\n",
+    "            f1 = metrics.f1_score(metrics_y_test, metrics_predictions, average=\"macro\")\n",
+    "\n",
+    "            self.metrics.append({\n",
+    "                \"training_for_label\": label,\n",
+    "                \"hamming_loss\": hl,\n",
+    "                \"f1_score\": f1\n",
+    "            })\n",
+    "        \n",
+    "    def predict(self, X: Any) -> Any:\n",
+    "        X_extended = np.asarray(X.todense())\n",
+    "\n",
+    "        predicted_labels = {}\n",
+    "        for label in self.order:\n",
+    "            prediction = self.classifiers[label].predict(X_extended)\n",
+    "            predicted_labels[label] = prediction\n",
+    "            \n",
+    "            reshaped_prediction = np.asarray(prediction).reshape(-1, 1)\n",
+    "            X_extended = np.hstack([X_extended, reshaped_prediction])\n",
+    "            X_extended = np.asarray(X_extended)\n",
+    "        \n",
+    "        predictions_in_original_label_order = []\n",
+    "        original_label_order = np.arange(len(self.order))\n",
+    "        for label in original_label_order:\n",
+    "            predictions_in_original_label_order.append(predicted_labels[label])\n",
+    "        # this is **very important**, otherwise the output of the model will not\n",
+    "        # be comparable to the testing dataset \n",
+    "\n",
+    "        reshaped_array = np.asarray(predictions_in_original_label_order).T\n",
+    "        return reshaped_array\n",
+    "\n",
+    "\n",
+    "fixed_model = FixedClassifierChain(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    order=[4, 5, 2, 0, 3, 1]\n",
+    "    )\n",
+    "\n",
+    "fixed_model.fit(X, y)\n",
+    "fixed_preds = fixed_model.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, fixed_preds)\n",
+    "f1_score = metrics.f1_score(y_test, fixed_preds, average=\"macro\")\n",
+    "\n",
+    "print(f\"(fixed) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(fixed) f1 score: {f1_score}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FixedClassifierChainWithLOPAndGA():\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        base_classifier: Any,\n",
+    "        num_generations: int = 5,\n",
+    "        random_state: Optional[int] = None\n",
+    "    ) -> None:\n",
+    "        self.base_classifier = base_classifier\n",
+    "        self.num_generations = num_generations\n",
+    "\n",
+    "        if random_state is None:\n",
+    "            self.random_state = np.random.randint(0, 1000)\n",
+    "        else:\n",
+    "            self.random_state = random_state\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        self.probabilities = calculate_probabilities(y)\n",
+    "        self.entropies = calculate_entropies(self.probabilities)\n",
+    "        label_count = y.shape[1]\n",
+    "\n",
+    "        label_space = np.arange(label_count)\n",
+    "        solutions_per_population = math.ceil(label_count / 2)\n",
+    "\n",
+    "        ga_model = pygad.GA( #type:ignore\n",
+    "            gene_type=int,\n",
+    "            gene_space=label_space,\n",
+    "            random_seed=self.random_state,\n",
+    "            save_best_solutions=False,\n",
+    "            fitness_func=self.model_fitness_func,\n",
+    "            allow_duplicate_genes=False, # very important, otherwise we will have duplicate labels in the ordering\n",
+    "            num_genes=label_count,\n",
+    "\n",
+    "            # set up\n",
+    "            num_generations=self.num_generations,\n",
+    "            sol_per_pop=solutions_per_population,\n",
+    "\n",
+    "            # following what the article describes\n",
+    "            keep_elitism=1, # also following what the article describes, but we have to double check [TODO]\n",
+    "            parent_selection_type=\"rws\", # following what the article describes\n",
+    "            # mutation_probability=0.005, # following what the article describes\n",
+    "\n",
+    "            # the following settings are fixed\n",
+    "            # they were chosen for no particular reason\n",
+    "            # they are being kept as fixed to simplify the model\n",
+    "            num_parents_mating=2,\n",
+    "            crossover_type=\"scattered\",\n",
+    "            mutation_type=\"random\",\n",
+    "            mutation_by_replacement=True,\n",
+    "            mutation_num_genes=1,\n",
+    "        )\n",
+    "\n",
+    "        ga_model.run()\n",
+    "\n",
+    "        solution, _, _ = ga_model.best_solution()\n",
+    "\n",
+    "        best_classifier = FixedClassifierChain(\n",
+    "            base_classifier=copy.deepcopy(self.base_classifier),\n",
+    "            order=solution,\n",
+    "        )\n",
+    "\n",
+    "        best_classifier.fit(X, y)\n",
+    "\n",
+    "        self.best_classifier = best_classifier\n",
+    "    \n",
+    "    def model_fitness_func(self, ga_instance: Any, solution: Any, solution_idx: Any) -> float:\n",
+    "        return self.test_solution(solution)\n",
+    "\n",
+    "    def test_solution(self, label_order: List[int]) -> float:\n",
+    "        if self.probabilities is None or self.entropies is None:\n",
+    "            raise Exception(\"probabilities and entropies must be calculated before testing a solution\")\n",
+    "        \n",
+    "        lop_matrix = build_lop_matrix(label_order, self.probabilities, self.entropies)\n",
+    "        return calculate_lop(lop_matrix)\n",
+    "    \n",
+    "    def predict(self, X: Any) -> Any:\n",
+    "        if self.best_classifier is None:\n",
+    "            raise Exception(\"model was not trained yet\")\n",
+    "\n",
+    "        return self.best_classifier.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_lop_model = FixedClassifierChainWithLOPAndGA(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    num_generations=20)\n",
+    "\n",
+    "fixed_lop_model.fit(X, y)\n",
+    "fixed_lop_preds = fixed_lop_model.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, fixed_lop_preds)\n",
+    "f1_score = metrics.f1_score(y_test, fixed_lop_preds, average=\"macro\")\n",
+    "\n",
+    "print(f\"(fixed lop) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(fixed lop) f1 score: {f1_score}\")"
+   ]
   }
  ],
  "metadata": {
