Updated genetic algorithm parameters and added validation for upper triangle sum

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -2313,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,10 +2335,11 @@
     "    def fit(self, X: Any, y: Any):\n",
     "        self.probabilities = calculate_probabilities(y)\n",
     "        self.entropies = calculate_entropies(self.probabilities)\n",
+    "        \n",
     "        label_count = y.shape[1]\n",
-    "\n",
     "        label_space = np.arange(label_count)\n",
-    "        solutions_per_population = math.ceil(label_count / 2)\n",
+    "        # solutions_per_population = math.ceil(label_count / 2)\n",
+    "        solutions_per_population = 50\n",
     "\n",
     "        ga_model = pygad.GA( #type:ignore\n",
     "            gene_type=int,\n",
@@ -2354,18 +2355,13 @@
     "            sol_per_pop=solutions_per_population,\n",
     "\n",
     "            # following what the article describes\n",
-    "            keep_elitism=1, # also following what the article describes, but we have to double check [TODO]\n",
-    "            parent_selection_type=\"rws\", # following what the article describes\n",
-    "            # mutation_probability=0.005, # following what the article describes\n",
-    "\n",
-    "            # the following settings are fixed\n",
-    "            # they were chosen for no particular reason\n",
-    "            # they are being kept as fixed to simplify the model\n",
+    "            keep_elitism=5,\n",
+    "            parent_selection_type=\"rws\",\n",
     "            num_parents_mating=2,\n",
-    "            crossover_type=\"scattered\",\n",
-    "            mutation_type=\"random\",\n",
-    "            mutation_by_replacement=True,\n",
-    "            mutation_num_genes=1,\n",
+    "            crossover_probability=0.9,\n",
+    "            crossover_type=\"two_points\",\n",
+    "            mutation_type=\"swap\",\n",
+    "            mutation_probability=0.01,\n",
     "        )\n",
     "\n",
     "        ga_model.run()\n",
@@ -2400,9 +2396,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(fixed lop) hamming loss: 0.08848940914158306\n",
+      "(fixed lop) f1 score: 0.6951101517133812\n"
+     ]
+    }
+   ],
    "source": [
     "fixed_lop_model = FixedClassifierChainWithLOPAndGA(\n",
     "    RandomForestClassifier(random_state=42),\n",
@@ -2417,6 +2422,113 @@
     "print(f\"(fixed lop) hamming loss: {hamming_loss}\")\n",
     "print(f\"(fixed lop) f1 score: {f1_score}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9.11. Validating the params of the generic algorithm\n",
+    "\n",
+    "### 9.11.1 Validating the upper triangle sum\n",
+    "\n",
+    "The paper gives an example table, plus some examples of the expected fitness score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.53"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.08+0.98+0.99+0.58+0.57+0.12+0.85+0.54)+\\\n",
+    "(0.42+0.01+0.23+0.43+0.68+0.94+0.67) +\\\n",
+    "(0.06+0.71+0.43+0.63+0.96+0.03)+\\\n",
+    "(0.41+0.32+0.21+0.39+0.04)+\\\n",
+    "(0.79+0.04+0.33+0.04)+\\\n",
+    "(0.28+0.78+0.26)+\\\n",
+    "(0.54+0.24)+\\\n",
+    "0.95"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And the results match what we are expected to see in the paper. **This is good**.\n",
+    "\n",
+    "### 9.11.2 Validating the other params\n",
+    "\n",
+    "The following parameters were set based on certain sections of the paper.\n",
+    "\n",
+    "```python\n",
+    "keep_elitism=5\n",
+    "```\n",
+    "\n",
+    "> We set the **elite-size = 5**, and the remaining members are selected using the roulette wheel.\n",
+    "\n",
+    "```python\n",
+    "parent_selection_type=\"rws\",\n",
+    "```\n",
+    "\n",
+    "> Parent selection: It involves selecting members of the population to the mating pool to reproduce for the next generation. Generally, it is aimed to select the fittest members to enable the population to pass its good genetic material to the solutions in the next generation. However, it induces a high selection pressure and may cause the population to be stuck in the local optima. Therefore, the members are selected randomly based on the probability computed by their fitness score to overcome this problem. In this work, we use the **roulette wheel selection**.\n",
+    "\n",
+    "```python\n",
+    "num_parents_mating=2\n",
+    "```\n",
+    "\n",
+    "> It selects **two random members** as parents from the mating pool for reproduction and produces a child (also known as an offspring)\n",
+    "\n",
+    "```python\n",
+    "crossover_probability=0.9\n",
+    "```\n",
+    "\n",
+    "> Crossover: It is the most significant phase in the genetic algorithm as it produces new members for the next generation consisting of the genetic material of both the parents. Therefore, it is applied with a higher probability, typically ranging in [0.7–1.0]. Here, **we use order crossover with probability 0.9**. It selects a random sub-sequence of genes from one parent and substitutes all the other genes from the other parent.\n",
+    "\n",
+    "```python\n",
+    "crossover_type=\"two_points\"\n",
+    "```\n",
+    "\n",
+    "> Crossover: It is the most significant phase in the genetic algorithm as it produces new members for the next generation consisting of the genetic material of both the parents. Therefore, it is applied with a higher probability, typically ranging in [0.7–1.0]. Here, we use order crossover with probability 0.9. It selects a **random sub-sequence of genes** from one parent and substitutes all the other genes from the other parent.\n",
+    "\n",
+    "The only way to get a random sub-sequence is by having two points. That's why I am assuming it to be \"two_points\".\n",
+    "\n",
+    "```python\n",
+    "mutation_type=\"swap\"\n",
+    "```\n",
+    "\n",
+    "> Mutation: It is essential as it provides the necessary diversity to the population to avoid being stuck in local optima. However, it is applied with a lower probability, typically ranging in [0.01–0.1], to avoid disrupting the promising parental genes. Here, we use **swap mutation** with the probability 0.01. The swap mutation swaps the position of two genes in a member.\n",
+    "\n",
+    "```python\n",
+    "mutation_probability=0.01\n",
+    "```\n",
+    "\n",
+    "> Mutation: It is essential as it provides the necessary diversity to the population to avoid being stuck in local optima. However, it is applied with a lower probability, typically ranging in [0.01–0.1], to avoid disrupting the promising parental genes. Here, we use swap mutation with **the probability 0.01**. The swap mutation swaps the position of two genes in a member."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9.13. Partial chains\n",
+    "\n",
+    "As the model is now fully working, let's dive into the last model, which is a derived version in the paper that uses partial chains."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
